--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
               <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About</a></li>
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Deals</a>
+                  <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="{% url 'products' %}">All Products</a></li>
                       <li><hr class="dropdown-divider" /></li>
@@ -28,11 +28,7 @@
 
           </ul>
           <form class="d-flex">
-              <button class="btn btn-outline-dark" type="submit">
-                  <i class="bi-cart-fill me-1"></i>
-                  Cart
-                  <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-              </button>
+              <a href="{% url 'cart_summary' %}" class="btn btn-outline-dark"><i class="bi-cart-fill me-1"></i>Cart<span class="badge bg-dark text-white ms-1 rounded-pill">0</span></a>
           </form>
       </div>
   </div>
