--- a/templates/pages/sales.html
+++ b/templates/pages/sales.html
@@ -2,6 +2,14 @@
 {% load static %}
 
 {% block content %}
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Clothes R Us</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Browse our newest and finest collection!</p>
+        </div>
+    </div>
+</header>
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -30,7 +38,9 @@
                                 </div>
                                 <!-- Product actions-->
                                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'product' product.id %}">View Product</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
